--- a/requirements.txt
+++ b/requirements.txt
@@ -1,81 +1,138 @@
+adal==1.2.7
+azure==4.0.0
 azure-ai-textanalytics==5.1.0
+azure-applicationinsights==0.1.0
+azure-batch==4.1.3
 azure-common==1.1.27
-azure-core==1.20.1
-backcall==0.2.0
+azure-core==1.21.1
+azure-cosmosdb-nspkg==2.0.2
+azure-cosmosdb-table==1.0.6
+azure-datalake-store==0.0.52
+azure-eventgrid==1.3.0
+azure-graphrbac==0.40.0
+azure-keyvault==1.1.0
+azure-loganalytics==0.1.1
+azure-mgmt==4.0.0
+azure-mgmt-advisor==1.0.1
+azure-mgmt-applicationinsights==0.1.1
+azure-mgmt-authorization==0.50.0
+azure-mgmt-batch==5.0.1
+azure-mgmt-batchai==2.0.0
+azure-mgmt-billing==0.2.0
+azure-mgmt-cdn==3.1.0
+azure-mgmt-cognitiveservices==3.0.0
+azure-mgmt-commerce==1.0.1
+azure-mgmt-compute==4.6.2
+azure-mgmt-consumption==2.0.0
+azure-mgmt-containerinstance==1.5.0
+azure-mgmt-containerregistry==2.8.0
+azure-mgmt-containerservice==4.4.0
+azure-mgmt-cosmosdb==0.4.1
+azure-mgmt-datafactory==0.6.0
+azure-mgmt-datalake-analytics==0.6.0
+azure-mgmt-datalake-nspkg==3.0.1
+azure-mgmt-datalake-store==0.5.0
+azure-mgmt-datamigration==1.0.0
+azure-mgmt-devspaces==0.1.0
+azure-mgmt-devtestlabs==2.2.0
+azure-mgmt-dns==2.1.0
+azure-mgmt-eventgrid==1.0.0
+azure-mgmt-eventhub==2.6.0
+azure-mgmt-hanaonazure==0.1.1
+azure-mgmt-iotcentral==0.1.0
+azure-mgmt-iothub==0.5.0
+azure-mgmt-iothubprovisioningservices==0.2.0
+azure-mgmt-keyvault==1.1.0
+azure-mgmt-loganalytics==0.2.0
+azure-mgmt-logic==3.0.0
+azure-mgmt-machinelearningcompute==0.4.1
+azure-mgmt-managementgroups==0.1.0
+azure-mgmt-managementpartner==0.1.1
+azure-mgmt-maps==0.1.0
+azure-mgmt-marketplaceordering==0.1.0
+azure-mgmt-media==1.0.0
+azure-mgmt-monitor==0.5.2
+azure-mgmt-msi==0.2.0
+azure-mgmt-network==2.7.0
+azure-mgmt-notificationhubs==2.1.0
+azure-mgmt-nspkg==3.0.2
+azure-mgmt-policyinsights==0.1.0
+azure-mgmt-powerbiembedded==2.0.0
+azure-mgmt-rdbms==1.9.0
+azure-mgmt-recoveryservices==0.3.0
+azure-mgmt-recoveryservicesbackup==0.3.0
+azure-mgmt-redis==5.0.0
+azure-mgmt-relay==0.1.0
+azure-mgmt-reservations==0.2.1
+azure-mgmt-resource==2.2.0
+azure-mgmt-scheduler==2.0.0
+azure-mgmt-search==2.1.0
+azure-mgmt-servicebus==0.5.3
+azure-mgmt-servicefabric==0.2.0
+azure-mgmt-signalr==0.1.1
+azure-mgmt-sql==0.9.1
+azure-mgmt-storage==2.0.0
+azure-mgmt-subscription==0.2.0
+azure-mgmt-trafficmanager==0.50.0
+azure-mgmt-web==0.35.0
+azure-nspkg==3.0.2
+azure-servicebus==0.21.1
+azure-servicefabric==6.3.0.0
+azure-servicemanagement-legacy==0.20.7
+azure-storage-blob==1.5.0
+azure-storage-common==1.4.2
+azure-storage-file==1.4.0
+azure-storage-queue==1.4.0
 beautifulsoup4==4.10.0
 Brotli==1.0.9
-certifi==2021.5.30
-charset-normalizer==2.0.3
-click==8.0.1
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.9
+click==8.0.3
 colorama==0.4.4
+cryptography==36.0.1
 cycler==0.11.0
-dash==1.21.0
-dash-bootstrap-components==0.12.2
-dash-core-components==1.17.1
-dash-html-components==1.1.4
-dash-table==4.12.0
-debugpy==1.5.1
-decorator==5.1.0
-deep-translator==1.5.4
-entrypoints==0.3
-et-xmlfile==1.1.0
-fire==0.4.0
-Flask==2.0.1
+dash==2.0.0
+dash-bootstrap-components==1.0.2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+deep-translator==1.5.5
+Flask==2.0.2
 Flask-Compress==1.10.1
-future==0.18.2
-icon-font-to-png==0.4.1
-idna==3.2
-install==1.3.4
-ipykernel==6.6.0
-ipython==7.30.1
-isodate==0.6.0
+fonttools==4.28.4
+idna==3.3
+isodate==0.6.1
 itsdangerous==2.0.1
-jedi==0.18.1
-Jinja2==3.0.1
+Jinja2==3.0.3
 joblib==1.1.0
-jupyter-client==7.1.0
-jupyter-core==4.9.1
 kiwisolver==1.3.2
 lxml==4.7.1
 MarkupSafe==2.0.1
-matplotlib==3.4.3
-matplotlib-inline==0.1.3
+matplotlib==3.5.1
 msrest==0.6.21
-nest-asyncio==1.5.4
+msrestazure==0.6.4
 nltk==3.6.5
-numpy==1.21.1
+numpy==1.21.4
 oauthlib==3.1.1
-openpyxl==3.0.7
-palettable==3.3.0
-pandas==1.3.1
-parso==0.8.3
-pickleshare==0.7.5
+packaging==21.3
+pandas==1.3.5
 Pillow==8.4.0
-plotly==5.1.0
-prompt-toolkit==3.0.24
-Pygments==2.10.0
+plotly==5.4.0
+pycparser==2.21
+PyJWT==2.3.0
 pyparsing==3.0.6
 PySocks==1.7.1
 python-dateutil==2.8.2
-pytz==2021.1
-pywin32==302
-pyzmq==22.3.0
+pytz==2021.3
 regex==2021.11.10
 requests==2.26.0
 requests-oauthlib==1.3.0
 six==1.16.0
-snscrape==0.4.0.20211208
+snscrape==0.4.2.20211215
 soupsieve==2.3.1
-stylecloud==0.5.2
 tenacity==8.0.1
-termcolor==1.1.0
-tinycss==0.4
-tornado==6.1
 tqdm==4.62.3
-traitlets==5.1.1
-urllib3==1.26.6
-wcwidth==0.2.5
-Werkzeug==2.0.1
-wfastcgi==3.0.0
+urllib3==1.26.7
+Werkzeug==2.0.2
 wordcloud==1.8.1
-XlsxWriter==3.0.2
