--- a/.github/workflows/main_juegocalamar.yml
+++ b/.github/workflows/main_juegocalamar.yml
@@ -22,15 +22,15 @@ jobs:
     - name: Log in to registry
       uses: docker/login-action@v1
       with:
-        registry: https://mcr.microsoft.com/
-        username: ${{ secrets.AzureAppService_ContainerUsername_d36ba99a3c904816a8bdc8395707bae8 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_b99296f99f6a40d989be45c3026fbff5 }}
+        registry: https://index.docker.io/v1/
+        username: ${{ secrets.AzureAppService_ContainerUsername_fef4800ada574535aed6730327d08db6 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_e18fc039636d4eac956405bf0fdd6fd5 }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_d36ba99a3c904816a8bdc8395707bae8 }}/appsvc/staticsite:${{ github.sha }}
+        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_fef4800ada574535aed6730327d08db6 }}/consultadhackathon:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'juegocalamar'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_fa736adf3650468593ca75eeeebbf4f5 }}
-        images: 'mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_d36ba99a3c904816a8bdc8395707bae8 }}/appsvc/staticsite:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_74635b97c21f4026ba6d9c95051e3392 }}
+        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_fef4800ada574535aed6730327d08db6 }}/consultadhackathon:${{ github.sha }}'
